Jigsaw mvn 3.6.0 (#358)
*  #357 fix make some test a module